# Linux_camera

./: README.md
.github/: copilot-instructions.md
.github/workflows/: README.md  alt-package-sources.yml  build-camera-app.yml  build-docker.yml  build-no-gstreamer.yml  build-ubuntu20.yml  build-yocto-image.yml  debug-build.yml  debug-packages.yml  minimal-build.yml  release.yml  simple-build-test.yml
CameraApp/: .gitignore  CMakeLists.txt  README.md  important_changes.md
CameraApp/build-diagnostic/: CMakeCache.txt  Makefile  cmake_install.cmake
CameraApp/build-test/: CMakeCache.txt  CameraApp  Makefile  cmake_install.cmake
CameraApp/build-test-script/: CMakeCache.txt  Makefile  cmake_install.cmake
CameraApp/src/: Constants.h  Fonts.cpp  Fonts.h  OverlayRenderer.cpp  OverlayRenderer.h  Video.cpp  Video.h  Window.cpp  Window.h  glad_loader.cpp  main.cpp
CameraApp/src/ErrorHandling/: ErrorCodes.h  ErrorHandler.cpp  ErrorHandler.h
CameraApp/src/Hardware/: ControlBoard.cpp  ControlBoard.h  Endoscope.cpp  Endoscope.h  GmslConnection.cpp  GmslConnection.h
CameraApp/src/Hardware/Camera/: Camera.cpp  Camera.h  CameraRegisterAccess.cpp  CameraRegisterAccess.h  WhiteBalance.cpp  WhiteBalance.h  WhiteBalanceOV2740.cpp  WhiteBalanceOV2740.h
CameraApp/src/Hardware/CommunicationInterfaces/: I2cCommunication.cpp  I2cCommunication.h  UartCommands.h  UartCommunication.cpp  UartCommunication.h
CameraApp/src/Hardware/Light/: LedControl.cpp  LedControl.h
CameraApp/src/Hardware/Temperature/: ImxTemperature.cpp  ImxTemperature.h  TemperatureMonitoring.cpp  TemperatureMonitoring.h
CameraApp/src/Interaction/: Action.cpp  Action.h  ActionHandler.cpp  ActionHandler.h  Button.h  ButtonHandler.cpp  ButtonHandler.h
CameraApp/src/MessageHandling/: Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h
CameraApp/src/Overlays/: ActiveCameraOverlay.cpp  ActiveCameraOverlay.h  BrightnessOverlay.cpp  BrightnessOverlay.h  DebugOverlay.cpp  DebugOverlay.h  IconOverlay.cpp  IconOverlay.h  ImageOverlay.cpp  ImageOverlay.h  MessageOverlay.cpp  MessageOverlay.h  Overlay.h  RecordingModeOverlay.cpp  RecordingModeOverlay.h  TextOverlay.cpp  TextOverlay.h  TimedOverlay.cpp  TimedOverlay.h  TimerCircle.cpp  TimerCircle.h  WhiteBalanceOverlay.cpp  WhiteBalanceOverlay.h
CameraApp/src/Strings/: MessageStrings.h
CameraApp/src/Testing/: ControlBoardLedControl.cpp  ControlBoardLedControl.h  HandpieceLedControl.cpp  HandpieceLedControl.h  IntegrationTesting.cpp  IntegrationTesting.h
CameraApp/src/Utils/: FileUtils.cpp  FileUtils.h  Utils.cpp  Utils.h  WindowUtils.cpp  WindowUtils.h
CameraApp/src/Versions/: Versions.cpp  Versions.h
docker/: Dockerfile.desktop  Dockerfile.embedded
tools/general_register_access/: README.md  general_register_access.c  general_register_access.h
tools/register_access/: README.md  register_access.c  register_access.h
